--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -774,13 +774,13 @@
  mod_job_replicator_add:0 "งาน $job_replicator$"
  mod_job_replicator_per_pop:0 "§G+1§! อาชีพ $job_replicator$ ต่อ $VALUE$ ประชากร"
  mod_job_replicator_per_pop_short:0 "\n§G+1§! £mod_job_replicator_add£ ต่อ $VALUE$ £pop£"
- job_crucible_drone:0 "Crucible Drone"
- job_crucible_drone_plural:0 "Crucible Drones"
+ job_crucible_drone:0 "โดรนเบ้าหลอม"
+ job_crucible_drone_plural:0 "โดรนเบ้าหลอม"
  job_crucible_drone_desc:0 "Specializing in the care of cyborg progeny, these drones ensure their charges develop into productive members of the collective."
- job_crucible_drone_effect_desc:0 "£job_crucible_drone£ $job_crucible_drone_plural$ turn $r_alloys$ and $r_food$ (or $r_minerals$) into £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§! and £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!."
- mod_job_crucible_drone_add:0 "$job_crucible_drone$ Jobs"
- mod_job_crucible_drone_per_pop:0 "§G+1§! $job_crucible_drone$ Job per $VALUE$ Pops"
- mod_job_crucible_drone_per_pop_short:0 "\n§G+1§! £mod_job_crucible_drone_add£ per $VALUE$ £pop£"
+ job_crucible_drone_effect_desc:0 "£job_crucible_drone£ $job_crucible_drone_plural$ เปลี่ยน $r_alloys$ และ $r_food$ (หรือ $r_minerals$) เป็น £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§! และ £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!"
+ mod_job_crucible_drone_add:0 "งาน $job_crucible_drone$"
+ mod_job_crucible_drone_per_pop:0 "อาชีพ $job_crucible_drone$ §G+1§! ต่อ $VALUE$ ประชากร"
+ mod_job_crucible_drone_per_pop_short:0 "\n§G+1§! £mod_job_crucible_drone_add£ ต่อ $VALUE$ £pop£"
  job_synapse_drone:0 "โดรนไซแน็ป"
  job_synapse_drone_plural:0 "โดรนไซแน็ป"
  job_synapse_drone_desc:1 "The macroscopic embodiment of a synapse, these drones focus on amplifying the overmind's ceaseless messages, and cleaning them of distortions."
@@ -984,7 +984,7 @@
  job_entertainer:0 "นักให้ความบันเทิง"
  job_entertainer_plural:0 "นักให้ความบันเทิง"
  job_entertainer_desc:1 "It is said there are only two types of lifeforms in the galaxy: the entertainers, and the entertained."
- job_entertainer_effect_desc:1 "£job_entertainer£ $job_entertainer_plural$ turn $r_consumer_goods$ into $r_unity$ and $r_amenities$"
+ job_entertainer_effect_desc:1 "£job_entertainer£ $job_entertainer_plural$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$ และ $r_amenities$"
  mod_job_entertainer_add:0 "งาน $job_entertainer$"
  mod_job_entertainer_per_pop:0 "§G+1§! อาชีพ $job_entertainer$ ต่อ $VALUE$ ประชากร"
  mod_job_entertainer_per_pop_short:0 "\n§G+1§! £mod_job_entertainer_add£ ต่อ $VALUE$ £pop£"
@@ -1108,7 +1108,7 @@
  job_unifier:0 "Unification Officer"
  job_unifier_plural:0 "Unification Officers"
  job_unifier_desc:0 "The administrative corps of our newly unified planet, these officers ensure that amenities are delivered to those in need."
- job_unifier_effect_desc:0 "£job_unifier£ $job_unifier_plural$ turn $r_consumer_goods$ and $r_food$ (or $r_minerals$) into $r_unity$ and $r_amenities$"
+ job_unifier_effect_desc:0 "£job_unifier£ $job_unifier_plural$ เปลี่ยน $r_consumer_goods$ และ $r_food$ (หรือ $r_minerals$) เป็น $r_unity$ และ $r_amenities$"
  mod_job_unifier_add:0 "$job_unifier$ Jobs"
  mod_job_unifier_per_pop:0 "§G+1§! $job_unifier$ Job per $VALUE$ Pops"
  mod_job_unifier_per_pop_short:0 "\n§G+1§! £mod_job_unifier_add£ per $VALUE$ £pop£"
@@ -2296,13 +2296,13 @@
  decision_abolish_resort_colony:0 "ยกเลิกดาวเคราะห์รีสอร์ต"
  decision_abolish_resort_colony_desc:1 "This world will no longer be considered a special resort, and all construction restrictions on its surface are lifted."
  resort_colony_empire_effects:0 "อาณานิคมของจักรวรรดิอื่น:\n   $MOD_PLANET_AMENITIES_MULT$: §G+15%§!\n   $MOD_PLANET_IMMIGRATION_PULL_MULT$: §G+15%§!"
- decision_crucible_colony:0 "Create Crucible World"
+ decision_crucible_colony:0 "สร้างโลกแห่งเบ้าหลอม"
  decision_crucible_colony_desc:0 "This world shall provide a dedicated environment in which the progeny of our cyborg drones can develop to become productive components of the collective."
  decision_crucible_colony_effects_short:0 "Disables construction of some £building£ §YBuildings§! on the planet\n\nIncreases £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§! in exchange for increased §Y$mod_planet_pops_upkeep_mult$§! and decreased §YResources from Jobs§!"
- decision_abolish_crucible_colony:0 "Abolish Crucible World"
+ decision_abolish_crucible_colony:0 "ยกเลิกโลกแห่งเบ้าหลอม"
  decision_abolish_crucible_colony_desc:0 "We shall repurpose this world for other uses."
  decision_crucible_colony_only_one:0 "£trigger_no£ The §Y[Root.Owner.GetName]§! can only have one §Y$crucible_colony$§!."
- crucible_colony:0 "Crucible World"
+ crucible_colony:0 "โลกแห่งเบ้าหลอม"
  crucible_colony_desc:0 "$col_crucible_desc$"
  crucible_colony_effects:0 "£building£ §YCapital Buildings§! have some §Y£job_replicator£ $job_replicator$§! Jobs replaced with §Y£job_crucible_drone£ $job_crucible_drone$§! Jobs."
  decision_slave_colony:0 "สร้างโลกทาส"
@@ -2864,7 +2864,7 @@
  col_ring_mix_desc:0 "An immense ringworld, its massive area spread between all matters of produce"
  col_default_machine:0 "อาณานิคม"
  col_default_machine_desc:1 "A new colony of our empire, purposely designed for frictionless, everyday efficiency."
- col_crucible:0 "Crucible World"
+ col_crucible:0 "โลกแห่งเบ้าหลอม"
  col_crucible_desc:0 "A world dedicated to the growth of cyborg drones, ensuring the progeny will quickly become productive components of the collective."
  col_pre_ftl_atomic:0 "$atomic_age$"
  col_pre_ftl_atomic_desc:0 "$col_primitive_desc$"
