--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -158,11 +158,11 @@
  operation_spark_rebellion_on_success:0 "$IF_SUCCESSFUL|E$\nForm a Rebellion and declare war against the Galactic Imperium."
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD:0 "ความยากของปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD$"
- MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:1 "Defense Against Hostile Operations"
+ MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:1 "การป้องกันปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD$"
  MOD_ESPIONAGE_OPERATION_COST_ADD:0 "ค่าปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_OPERATION_COST_ADD$"
- MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:2 "Infiltration Required for Hostile Operations"
+ MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:2 "ต้องใช้การแทรกซึมสำหรับปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD$"
  MOD_ESPIONAGE_OPERATION_SKILL_ADD:0 "สกิลปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_SKILL_MULT:0 "$MOD_ESPIONAGE_OPERATION_SKILL_ADD$"
@@ -203,16 +203,16 @@
  mod_op_cat_technology_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_technology$)"
  mod_op_cat_military_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_military$)"
  mod_hostile_op_cat_infiltration_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_infiltration$)"
- mod_hostile_op_cat_subterfuge_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_subterfuge$)"
- mod_hostile_op_cat_sabotage_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_sabotage$)"
- mod_hostile_op_cat_manipulation_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_manipulation$)"
- mod_hostile_op_cat_provocation_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_provocation$)"
- mod_hostile_op_cat_government_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_government$)"
- mod_hostile_op_cat_diplomacy_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_diplomacy$)"
- mod_hostile_op_cat_economy_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_economy$)"
- mod_hostile_op_cat_technology_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_technology$)"
- mod_hostile_op_cat_military_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_military$)"
- mod_hostile_operation_sabotage_starbase_difficulty_add:1 "Defense Against Hostile Operations ($operation_sabotage_starbase$)"
+ mod_hostile_op_cat_subterfuge_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_subterfuge$)"
+ mod_hostile_op_cat_sabotage_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_sabotage$)"
+ mod_hostile_op_cat_manipulation_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_manipulation$)"
+ mod_hostile_op_cat_provocation_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_provocation$)"
+ mod_hostile_op_cat_government_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_government$)"
+ mod_hostile_op_cat_diplomacy_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_diplomacy$)"
+ mod_hostile_op_cat_economy_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_economy$)"
+ mod_hostile_op_cat_technology_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_technology$)"
+ mod_hostile_op_cat_military_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($op_cat_military$)"
+ mod_hostile_operation_sabotage_starbase_difficulty_add:1 "การป้องกันปฏิบัติการของศัตรู ($operation_sabotage_starbase$)"
  mod_op_cat_subterfuge_skill_add:1 "สกิลปฏิบัติการ ($op_cat_subterfuge$)"
  mod_op_cat_sabotage_skill_add:1 "สกิลปฏิบัติการ ($op_cat_sabotage$)"
  mod_op_cat_manipulation_skill_add:1 "สกิลปฏิบัติการ ($op_cat_manipulation$)"
