--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -841,7 +841,7 @@
  r_unity:1 "£unity£ §Y$unity$§!"
  r_influence:1 "£influence£ §Y$influence$§!"
  r_research:1 "£physics£ £society£ £engineering£ §YResearch Points§!"
- r_amenities:1 "£amenities£ §YAmenities§!"
+ r_amenities:1 "£amenities£ §Yความอยู่ดีกินดี§!"
  r_trade_value:1 "£trade_value£ §YTrade Value§!"
  r_loyalty:1 "£loyalty£ §Yความภักดีต่อเดือน§!"
  r_rare_crystals:1 "£rare_crystals£ §Y$rare_crystals$§!"
