--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -168,10 +168,10 @@
  HAS_NOT_NUM_ARTIFICIAL_POP_ASSEMBLY:0 "Amount of Artificial Pops gained per Year is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_BUILDINGS:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_BUILDINGS:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ ไม่ $COMPARATOR$ $NUM|Y$"
- HAS_NUM_BUILDINGS_EXISTING_AND_IN_CONSTRUCTION:0 "Number of $BUILDING$ Buildings (including queued) is $COMPARATOR$ $NUM|Y$"
- HAS_NOT_NUM_BUILDINGS_EXISTING_AND_IN_CONSTRUCTION:0 "Number of $BUILDING$ Buildings (including queued) is NOT $COMPARATOR$ $NUM|Y$"
- HAS_NUM_BUILDINGS_IN_CONSTRUCTION:0 "Number of $BUILDING$ Buildings queued is $COMPARATOR$ $NUM|Y$"
- HAS_NOT_NUM_BUILDINGS_IN_CONSTRUCTION:0 "Number of $BUILDING$ Buildings queued is NOT $COMPARATOR$ $NUM|Y$"
+ HAS_NUM_BUILDINGS_EXISTING_AND_IN_CONSTRUCTION:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ (รวมที่อยู่ในคิวก่อสร้าง) $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_NUM_BUILDINGS_EXISTING_AND_IN_CONSTRUCTION:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ (รวมที่อยู่ในคิวก่อสร้าง) ไม่ $COMPARATOR$ $NUM|Y$"
+ HAS_NUM_BUILDINGS_IN_CONSTRUCTION:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ ที่อยู่ในคิวก่อสร้าง $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_NUM_BUILDINGS_IN_CONSTRUCTION:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ ที่อยู่ในคิวก่อสร้าง ไม่$COMPARATOR$ $NUM|Y$"
  HAS_NUM_DISTRICTS:0 "จำนวน $DISTRICT$ $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_DISTRICTS:0 "จำนวน $DISTRICT$ ไม่ $COMPARATOR$ $NUM|Y$"
  HAS_NUM_DISTRICTS_ANY:0 "จำนวนเขต $COMPARATOR$ $NUM|Y$"
@@ -205,8 +205,8 @@
  TRIGGER_HAS_GOVERNMENT_AUTHORITY:0 "มีระบอบการปกครอง $KEY|Y$"
  TRIGGER_HAS_NOT_GOVERNMENT_AUTHORITY:1 "ไม่มีระบอบการปกครอง $KEY|Y$"
  HAS_GOVERNMENT_ICON_TIP:0 "This option is available due to $WHO|H$ being a $GOV|Y$"
- IS_PRIMITIVE:1 "Is pre-FTL"
- IS_NOT_PRIMITIVE:1 "Is NOT pre-FTL"
+ IS_PRIMITIVE:1 "เป็น pre-FTL"
+ IS_NOT_PRIMITIVE:1 "ไม่เป็น pre-FTL"
  HAS_NEXT_PRE_FTL_AGE:0 "$COUNTRY|Y$ is pre-FTL and can advance tech age"
  HAS_NOT_NEXT_PRE_FTL_AGE:0 "$COUNTRY|Y$ is NOT pre-FTL or can NOT advance tech age"
  HAS_PRE_FTL_AGE:0 "$COUNTRY|Y$ is pre-FTL and is in the $AGE|Y$"
@@ -308,10 +308,10 @@
  IS_COLONY:0 "เป็นอาณานิคม"
  ENERGY_NOT_TRIGGER:0 "พลังงานไม่ได้ $COMPARE$ $VAL|2Y$"
  ENERGY_TRIGGER:0 "พลังงานมี $COMPARE$ $VAL|2Y$"
- MINERALS_NOT_TRIGGER:0 "Minerals are NOT $COMPARE$ $VAL|Y$"
- MINERALS_TRIGGER:0 "Minerals are $COMPARE$ $VAL|Y$"
- INFLUENCE_NOT_TRIGGER:0 "Influence is NOT $COMPARE$ $VAL|0Y$"
- INFLUENCE_TRIGGER:0 "Influence is $COMPARE$ $VAL|0Y$"
+ MINERALS_NOT_TRIGGER:0 "แร่ ไม่$COMPARE$ $VAL|Y$"
+ MINERALS_TRIGGER:0 "แร่ $COMPARE$ $VAL|Y$"
+ INFLUENCE_NOT_TRIGGER:0 "อิทธิพล ไม่$COMPARE$ $VAL|0Y$"
+ INFLUENCE_TRIGGER:0 "อิทธิพล $COMPARE$ $VAL|0Y$"
  UNITY_NOT_TRIGGER:0 "เอกภาพ ไม่$COMPARE$ $VAL|0Y$"
  UNITY_TRIGGER:0 "เอกภาพ $COMPARE$ $VAL|0Y$"
  FLEET_POWER_NOT_TRIGGER:1 "$FLEET_POWER$ ไม่ $COMPARE$ $VAL|0Y$"
@@ -432,8 +432,8 @@
  FEDERATION_EXPENSES_NOT_TRIGGER:0 "ค่าใช้จ่ายสหพันธ์เดือนที่แล้ว ไม่$COMPARE$ $VALUE|Y$"
  REPARATION_EXPENSES_TRIGGER:0 "Last month's repair expenses are $COMPARE$ $VALUE|Y$"
  REPARATION_EXPENSES_NOT_TRIGGER:0 "Last month's repair expenses are not $COMPARE$ $VALUE|Y$"
- HAS_ANOMALY:0 "Has an Anomaly"
- HAS_NOT_ANOMALY:0 "ไม่มีความผิดปกติ"
+ HAS_ANOMALY:0 "มีสิ่งผิดปกติ"
+ HAS_NOT_ANOMALY:0 "ไม่มีสิ่งผิดปกติ"
  STORED_TECH_POINTS_TRIGGER:0 "The amount of $AREA$ research is $COMPARE$ $VALUE|Y$"
  STORED_TECH_POINTS_NOT_TRIGGER:0 "The amount of $AREA$ research is NOT $COMPARE$ $VALUE|Y$"
  BALANCE_TRIGGER:0 "Country balance is $COMPARE$ $VALUE|Y$"
@@ -464,8 +464,8 @@
  IS_SPECIFIC_HALF_SPECIES_TRIGGER:0 "Is a Half-Species of $SPECIES|Y$"
  IS_SPECIES_CLASS:0 "เป็น $SPECIES$"
  IS_NOT_SPECIES_CLASS:0 "ไม่ใช่ $SPECIES|Y$"
- IS_SPECIES:0 "Is $SPECIES$"
- IS_NOT_SPECIES:0 "Is NOT $SPECIES|Y$"
+ IS_SPECIES:0 "เป็น $SPECIES$"
+ IS_NOT_SPECIES:0 "ไม่ใช่ $SPECIES|Y$"
  HAS_OPINION_MODIFIER:0 "Has opinion modifier $MODIFIER|Y$ of $COUNTRY|Y$"
  HAS_NOT_OPINION_MODIFIER:0 "Has NOT opinion modifier $MODIFIER|Y$ of $COUNTRY|Y$"
  HAS_OPINION_MODIFIER_ANY:0 "Has opinion modifier $MODIFIER|Y$ of anyone"
@@ -1027,13 +1027,13 @@
  ADD_ENERGY_EFFECT:2 "£energy£ §Yเครดิตพลังงาน§!: $NUM$\n"
  RANDOM_LIST_EFFECT:0 "§YOne of $SIZE$ options will happen:§!\n"
  RANDOM_EFFECT:0 "§Y$CHANCE$%§! chance of "
- NO_EFFECT:0 "No Effect"
+ NO_EFFECT:0 "ไม่มีเอฟเฟกต์"
  CREATE_FLEET_FROM_NAVAL_CAP_EFFECT:1 "$COUNTRY|Y$ is given a fleet $PERC|Y%$ the size of its naval capacity, with owner type $OWNER_TYPE|Y$."
- ADD_MINERALS_EFFECT:3 "£minerals£ §YMinerals§!: $NUM$\n"
+ ADD_MINERALS_EFFECT:3 "£minerals£ §Yแร่§!: $NUM$\n"
  ADD_FOOD_EFFECT:3 "£food£ §Yอาหาร§!: $NUM$\n"
- ADD_PHYSICS_EFFECT:3 "£physics£ §YPhysics Research§!: $NUM$\n"
- ADD_SOCIETY_EFFECT:3 "£society£ §YSociety Research§!: $NUM$\n"
- ADD_ENGINEERING_EFFECT:3 "£engineering£ §YEngineering Research§!: $NUM$\n"
+ ADD_PHYSICS_EFFECT:3 "£physics£ §Yการวิจัยทางฟิสิกส์§!: $NUM$\n"
+ ADD_SOCIETY_EFFECT:3 "£society£ §Yการวิจัยสังคม§!: $NUM$\n"
+ ADD_ENGINEERING_EFFECT:3 "£engineering£ §Yการวิจัยวิศวกรรม§!: $NUM$\n"
  ADD_UNITY_EFFECT:3 "£unity£ §Yเอกภาพ§!: $NUM$\n"
  ALL_WAR_DEFENDERS:0 "All War Defenders"
  ALL_WAR_ATTACKERS:0 "All War Attackers"
@@ -1126,9 +1126,9 @@
  VARIABLE_IS_SET_TRIGGER:0 "Variable $VAR|Y$ is set."
  VARIABLE_IS_NOT_SET_TRIGGER:0 "Variable $VAR|Y$ is NOT set."
  TYPE_EVENT:2 "The event '§Y$WHICH$§!' happens$TIME$.\n"
- TYPE_EVENT_ONLY_DAYS:0 " in $WHEN|Y$"
- TYPE_EVENT_ONLY_RANDOM_DAYS:0 " in §Y0 to $WHEN$§!"
- TYPE_EVENT_ONLY_RANDOM_DAYS2:0 " in §Y0 days to $WHEN$§!"
+ TYPE_EVENT_ONLY_DAYS:0 " ใน $WHEN|Y$"
+ TYPE_EVENT_ONLY_RANDOM_DAYS:0 " ใน §Y0 ถึง $WHEN$§!"
+ TYPE_EVENT_ONLY_RANDOM_DAYS2:0 " ใน §Y0 วันถึง $WHEN$§!"
  TYPE_EVENT_IN_UP_TO_A_YEAR:0 " ใน §Y$FROM$ ถึง $TO$ วัน§!"
  TYPE_EVENT_IN_X_YEARS:0 " ใน §Y$FROM$ ถึง $TO$ ปี§!"
  TYPE_EVENT_IN_TIME_DURATION:0 "ใน §Y$FROM$ ถึง $TO$§!"
@@ -1177,7 +1177,7 @@
  REMOVE_ETHIC_EFFECT:1 "จริยธรรม $ETHIC|Y$ หายไป\n"
  QUEUE_FLEET_ACTIONS_EFFECT:0 "Fleet will do special action"
  CLEAR_FLEET_ACTIONS_EFFECT:0 "Removes any fleet special actions"
- ADD_INFLUENCE:2 "£influence£ §YInfluence§!: $VALUE|Y$\n"
+ ADD_INFLUENCE:2 "£influence£ §Yอิทธิพล§!: $VALUE|Y$\n"
  MODIFY_SPECIES:1 "Modify pops in $COUNTRY|Y$ by adding the trait(s) $ADD$, and removing the trait(s) $REMOVE$"
  MODIFY_SPECIES_ADD:1 "Modify pops in $COUNTRY|Y$ by adding the trait(s) $ADD$"
  MODIFY_SPECIES_REMOVE:1 "Modify pops in $COUNTRY|Y$ by removing the trait(s) $REMOVE$"
@@ -1203,8 +1203,8 @@
  DOWNGRADE_ALL_BUILDINGS_EFFECT:0 "Downgrade all non-capital buildings"
  DOWNGRADE_ALL_BUILDINGS_OF_TYPE_EFFECT:0 "Downgrade all $TYPE$ buildings"
  REMOVE_SPECIFIC_BUILDING_EFFECT:0 "ลบ $BUILDING|Y$"
- RUIN_SPECIFIC_BUILDING_EFFECT:0 "Disable $BUILDING|Y$"
- REPAIR_SPECIFIC_BUILDING_EFFECT:0 "Repair $BUILDING|Y$"
+ RUIN_SPECIFIC_BUILDING_EFFECT:0 "ปิดใช้งาน $BUILDING|Y$"
+ REPAIR_SPECIFIC_BUILDING_EFFECT:0 "ซ่อม $BUILDING|Y$"
  DISABLE_SPECIFIC_BUILDING_EFFECT:0 "Ruin $BUILDING|Y$"
  ADD_DISTRICT_EFFECT:0 "เพิ่ม $DISTRICT|Y$ ไปที่ดาวเคราะห์"
  REMOVE_DISTRICT_EFFECT:0 "ลบเขต"
@@ -1264,7 +1264,7 @@
  SPECIES_GENDER_TRIGGER:0 "Species has $GENDER|Y$ gender"
  SPECIES_NOT_GENDER_TRIGGER:0 "Species does NOT have $GENDER|Y$ gender"
  POP_NOT_MEMBER_OF_ANY_FACTION_TRIGGER:0 "$POP|Y$ ไม่ได้อยู่ในกลุ่มการเมืองใดๆ"
- POP_MEMBER_OF_ANY_FACTION_TRIGGER:0 "$POP|Y$ is in a Pop Faction"
+ POP_MEMBER_OF_ANY_FACTION_TRIGGER:0 "$POP|Y$ อยู่ในกลุ่มการเมือง"
  POP_NOT_MEMBER_OF_FACTION_TRIGGER:0 "$POP|Y$ ไม่ได้เป็นสมาชิกของ $FACTION|Y$"
  POP_MEMBER_OF_FACTION_TRIGGER:0 "$POP|Y$ is a member of $FACTION|Y$"
  NOT_LEADER_OF_ANY_FACTION_TRIGGER:0 "$LEADER|Y$ is NOT leading any Pop Faction"
@@ -1390,8 +1390,8 @@
  any_relation_trigger:0 "Any Country Relation"
  effect_every_relation:0 "Every Country Relation"
  effect_random_relation:0 "Random Country Relation"
- CRIME_LESS_THAN:0 "$PLANET_CRIME_TITLE$ $VAL0|2Y$ less than $COMPARE$ $VAL1|2Y$"
- CRIME_AT_LEAST:0 "$PLANET_CRIME_TITLE$ $VAL0|2Y$ at least $COMPARE$ $VAL1|2Y$"
+ CRIME_LESS_THAN:0 "$PLANET_CRIME_TITLE$ $VAL0|2Y$ น้อยกว่า $COMPARE$ $VAL1|2Y$"
+ CRIME_AT_LEAST:0 "$PLANET_CRIME_TITLE$ $VAL0|2Y$ อย่างน้อย $COMPARE$ $VAL1|2Y$"
  STABILITY_LESS_THAN:0 "$PLANET_STABILITY_TITLE$ $VAL0|2Y$ น้อยกว่า $COMPARE$ $VAL1|2Y$"
  STABILITY_AT_LEAST:0 "$PLANET_STABILITY_TITLE$ $VAL0|2Y$ อย่างน้อย $COMPARE$ $VAL1|2Y$"
  TRIGGER_HAS_CIVIC:2 "มีพลเมือง $CIVIC|Y$"
@@ -1533,8 +1533,8 @@
  SET_FEDERATION_SETTINGS:0 "Apply federation settings:\n$SETTINGS$"
  FEDERATION_SETTING:0 "- $SETTING|H$: $VALUE|H$\n"
  ADD_FEDERATION_COHESION:0 "เพิ่ม $VALUE|H$ ความสัมพันธ์ในสหพันธ์ไปที่ $FEDERATION|H$"
- FEDERATION_LEVEL_LESS_THAN:0 "$FEDERATION|H$ is NOT $COMPARE$ level $VAL1|0Y$"
- FEDERATION_LEVEL_AT_LEAST:0 "$FEDERATION|H$ is $COMPARE$ level $VAL1|0Y$"
+ FEDERATION_LEVEL_LESS_THAN:0 "$FEDERATION|H$ ไม่$COMPARE$ เลเวล $VAL1|0Y$"
+ FEDERATION_LEVEL_AT_LEAST:0 "$FEDERATION|H$ $COMPARE$ เลเวล $VAL1|0Y$"
  ADD_FEDERATION_EXPERIENCE:1 "Add $EXPERIENCE|2Y$ experience to $FEDERATION|Y$"
  FEDERATION_EXPERIENCE_LESS_THAN:1 "$FEDERATION|H$ does NOT have $COMPARE$ $VAL1|2Y$ experience"
  FEDERATION_EXPERIENCE_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ experience"
@@ -1611,7 +1611,7 @@
  effect_every_neighbor_country:1 "Every neighbor country"
  RANDOM_OWNED_PLANET_EFFECT:0 "Random $ADJ$ planet ($PLANET|H$):\n	"
  EVERY_OWNED_PLANET_EFFECT:0 "Every $ADJ$ planet:\n	"
- DURATION_DAYS:0 "$TIME$ days"
+ DURATION_DAYS:0 "$TIME$ วัน"
  DURATION_MONTHS:0 "$TIME$ เดือน"
  ADD_TMP_TRAIT:0 "§H$LEADER$§! ตอนนี้มีคุณลักษณะ §H$TRAIT$§! เป็นระยะเวลา $DURATION|Y$\n"
  HAS_UNLOCKED_ALL_TRADITIONS:0 "$COUNTRY|Y$ has unlocked all available Traditions"
@@ -1769,7 +1769,7 @@
  GALAXY_SETUP_VALUE:0 "Galaxy Setup Value is $COMPARE$ $VAL|Y$"
  HAS_GOVERNMENT_YES:0 "Has a Government"
  HAS_GOVERNMENT_NO:0 "ไม่มีรัฐบาล"
- HAS_GOVERNMENT:1 "Has a government of type $GOV|Y$"
+ HAS_GOVERNMENT:1 "มีรัฐบาลประเภท $GOV|Y$"
  HAS_NOT_GOVERNMENT:1 "ไม่มีรัฐบาลประเภท $GOV|Y$"
  ADD_INTEL_EFFECT:1 "$ACTOR|Y$ ได้รับข้อมูล $INTEL$ ของ $TARGET|Y$"
  ADD_INTEL_REPORT_EFFECT:0 "$ACTOR|Y$ ได้ข้อมูล $LEVEL$ $CATEGORY|Y$ ของ $TARGET|Y$ เป็นเวลา $DAYS|Y$ วัน"
