--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -672,15 +672,15 @@
  tech_regenerative_hull_tissue_desc:0 "A genetically altered version of silicon-based bacteria could potentially be manipulated to regenerate non-organic materials."
  tech_vitality_boosters:0 "การเพิ่มพลังชีวิต"
  tech_vitality_boosters_desc:1 "Where the body fails, science intervenes."
- tech_lithoid_transgenesis:0 "Silicate Transgenesis"
+ tech_lithoid_transgenesis:0 "การถ่ายโอนยีน[เผ่าหิน]ไปยังสิ่งมีชีวิตอื่น"
  tech_lithoid_transgenesis_desc:0 "The similarities between silicon based and carbon based life allow us to synthesize Lithoid evolutionary traits in carbon based species."
  TECH_UNLOCK_LITHOID_GENETICS_TITLE:0 "§HUnlocks Feature:§! Lithoid Transgenesis"
  TECH_UNLOCK_LITHOID_GENETICS_DESC:0 "Allows us to add Lithoid Traits to Biological Species through Species Modification."
- tech_plantoid_transgenesis:0 "Botanical Transgenesis"
+ tech_plantoid_transgenesis:0 "การถ่ายโอนยีน[พืช]ไปยังสิ่งมีชีวิตอื่น"
  tech_plantoid_transgenesis_desc:0 "With some artificial encouragement, the evolutionary adaptations found in botanical species can be replicated in other forms of life."
  TECH_UNLOCK_PLANTOID_GENETICS_TITLE:0 "§HUnlocks Feature:§! Botanical Transgenesis"
  TECH_UNLOCK_PLANTOID_GENETICS_DESC:0 "Allows us to add Botanical Traits to Organic Species through Species Modification."
- tech_leviathan_transgenesis:0 "Leviathan Transgenesis"
+ tech_leviathan_transgenesis:0 "การถ่ายโอนยีน[ลิไวธาน]ไปยังสิ่งมีชีวิตอื่น"
  tech_leviathan_transgenesis_desc:0 "Galactic fauna have remarkable adaptions to life in interstellar space. Mastery of these traits will be our genetic triumph."
  TECH_UNLOCK_LEVIATHAN_GENETICS_TITLE:0 "§HUnlocks Feature:§! Leviathan Transgenesis"
  TECH_UNLOCK_LEVIATHAN_GENETICS_DESC:0 "Allows us to add Leviathan Traits to Organic Species through Species Modification."
